Redesign and Gulp install!

--- a/sass/base/_icons.sass
+++ b/sass/base/_icons.sass
@@ -33,6 +33,7 @@ $icon-home: '%3Csvg%20version%3D%221.1%22%20id%3D%22svg3814%22%20xmlns%3D%22http
 %icon-comment
   @extend %icon
   background: url('../images/icons/icon-comment.svg') no-repeat center center
+  background-size: 16px 20px
 
 %icon-star-empty
   @extend %icon
@@ -45,6 +46,7 @@ $icon-home: '%3Csvg%20version%3D%221.1%22%20id%3D%22svg3814%22%20xmlns%3D%22http
 %icon-share
   @extend %icon
   background: url('../images/icons/icon-share.svg') no-repeat center center
+  background-size: 16px 20px
 
 %icon-plus
   @extend %icon
