--- a/sass/modules/_post-artist-search.sass
+++ b/sass/modules/_post-artist-search.sass
@@ -1,6 +1,12 @@
 [data-module="post-artist-search"]
     background-color: white
     
+    #post-artist-search
+        position: relative
+
+        input[type="text"]
+            width: 88%
+
     #post-artist-meta
         border-top: 2px solid $border-color
 
@@ -8,7 +14,6 @@
         +rem(font-size, $font-size-h2)
         +rem(padding, 7px 9px)
         color: #7b8386
-        width: 88%
         height: 42px
         outline: none
         opacity: 0.9
