--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-.serif, body {
+.serif, body, .post-title > h2 {
   font-family: "Playfair Display", Times, serif; }
 
-.sans, h1, h2, button, [data-module="post-artist-tags"] .tag {
+.sans, h1, h2, button, [data-module="post-artist-tags"] .tag, .post-artist-meta span, .post-meta {
   font-family: "Oswald", Helvetica, Arial, sans-serif;
   letter-spacing: 1px; }
 
@@ -30,7 +30,7 @@ h2 {
   font-size: 18px ;
   font-size: 1.8rem ; }
 
-[data-module="post-artist-search"] .post-photo, [data-module="post-artist-search"] .post-video, [data-module="post-artist-search"] .post-text-post, [data-module="post-artist-search"] .post-tag-friend, [data-module="post-artist-tags"] .tag a::after {
+[data-module="post-artist-search"] .post-photo, [data-module="post-artist-search"] .post-video, [data-module="post-artist-search"] .post-text-post, [data-module="post-artist-search"] .post-tag-friend, .share-bar li.post-delete a:after, .share-bar li.post-comment a:after, .share-bar li.post-fav a:after, .share-bar li.post-share a:after, [data-module="post-artist-tags"] .tag a::after {
   content: "";
   width: 16px ;
   width: 1.6rem ;
@@ -49,6 +49,20 @@ h2 {
 
 [data-module="post-artist-search"] .post-tag-friend {
   background: url("../images/icons/icon-add-person.svg") no-repeat center center; }
+
+.share-bar li.post-delete a:after {
+  background: url("../images/icons/icon-trash.svg") no-repeat center center; }
+
+.share-bar li.post-comment a:after {
+  background: url("../images/icons/icon-comment.svg") no-repeat center center;
+  background-size: 16px 20px; }
+
+.share-bar li.post-fav a:after {
+  background: url("../images/icons/icon-star-empty.svg") no-repeat center center; }
+
+.share-bar li.post-share a:after {
+  background: url("../images/icons/icon-share.svg") no-repeat center center;
+  background-size: 16px 20px; }
 
 [data-module="post-artist-tags"] .tag a::after {
   background: url("../images/icons/icon-clear-tag.svg") no-repeat center center; }
@@ -168,6 +182,10 @@ header#header {
 
 [data-module="post-artist-search"] {
   background-color: white; }
+  [data-module="post-artist-search"] #post-artist-search {
+    position: relative; }
+    [data-module="post-artist-search"] #post-artist-search input[type="text"] {
+      width: 88%; }
   [data-module="post-artist-search"] #post-artist-meta {
     border-top: 2px solid #8f043a; }
   [data-module="post-artist-search"] input[type="text"] {
@@ -176,7 +194,6 @@ header#header {
     padding: 7px 9px ;
     padding: 0.7rem 0.9rem ;
     color: #7b8386;
-    width: 88%;
     height: 42px;
     outline: none;
     opacity: 0.9;
@@ -217,8 +234,8 @@ header#header {
     padding: 0 8px ;
     padding: 0 0.8rem ;
     background-color: #8f043a;
-    font-size: 10px ;
-    font-size: 1rem ;
+    font-size: 12px ;
+    font-size: 1.2rem ;
     margin: 0 5px ;
     margin: 0 0.5rem ;
     text-transform: lowercase;
@@ -242,7 +259,171 @@ header#header {
   right: 0;
   top: 0; }
 
-[data-module="wfm-post"] {
+.post-box {
+  margin-bottom: 30px ;
+  margin-bottom: 3rem ; }
+
+#post-text-container input[type="text"] {
+  width: 100%; }
+
+.post-artist {
+  position: relative;
+  display: block;
+  width: 80px ;
+  width: 8rem ;
+  height: 80px ;
+  height: 8rem ;
+  margin: 20px 0 20px auto ;
+  margin: 2rem 0 2rem auto ;
+  cursor: pointer; }
+  .post-artist:first-child {
+    margin-top: 0; }
+  .post-artist:last-child {
+    margin-bottom: 0; }
+
+.post-image img {
+  width: 100%;
+  height: auto; }
+
+.post-artists {
+  position: absolute;
+  top: 15px ;
+  top: 1.5rem ;
+  right: 10px ;
+  right: 1rem ;
+  overflow: hidden;
+  width: 230px ;
+  width: 23rem ; }
+  .post-artists .post-show-details {
+    visibility: hidden;
+    width: 200px ;
+    width: 20rem ;
+    overflow: hidden;
+    padding-right: 20px; }
+    .post-artists .post-show-details.show {
+      visibility: visible; }
+      .post-artists .post-show-details.show .post-artist-meta {
+        right: 20px ;
+        right: 2rem ; }
+
+.post-artist-meta {
+  -webkit-transition: right 0.2s ease-out;
+  transition: right 0.2s ease-out;
+  width: 0;
+  min-width: 200px ;
+  min-width: 20rem ;
+  min-height: 42px ;
+  min-height: 4.2rem ;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 7px 70px 7px 10px ;
+  padding: 0.7rem 7rem 0.7rem 1rem ;
+  background: #8f043a;
+  border-radius: 20px ;
+  border-radius: 2rem ;
+  text-align: right;
+  overflow: hidden;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.6);
+  opacity: 0.9; }
+  .post-artist-meta span {
+    display: block;
+    text-transform: uppercase;
+    color: white;
+    font-size: 12px ;
+    font-size: 1.2rem ; }
+
+.post-artist-image {
+  display: block;
+  border-radius: 40px ;
+  border-radius: 4rem ;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.6);
+  width: 80px ;
+  width: 8rem ;
+  height: 80px ;
+  height: 8rem ;
+  overflow: hidden; }
+  .post-artist-image img {
+    width: auto;
+    height: 100%;
+    position: relative;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%); }
+
+.post-title {
+  position: absolute;
+  bottom: 30px;
+  left: 0;
+  width: 100%;
+  background: white;
+  opacity: 0.8;
+  padding: 5px 40px 10px 100px ;
+  padding: 0.5rem 4rem 1rem 10rem ;
+  min-height: 60px ;
+  min-height: 6rem ; }
+  .post-title > h2 {
+    letter-spacing: 0;
+    font-weight: bold;
+    margin: 0; }
+
+.post-meta {
+  position: absolute;
+  bottom: 0;
+  height: 30px ;
+  height: 3rem ;
+  background: #8f043a;
+  width: 100%;
+  padding: 6px 10px ;
+  padding: 0.6rem 1rem ;
+  color: white;
+  text-transform: uppercase;
+  font-size: 11px ;
+  font-size: 1.1rem ; }
+  .post-meta > div {
+    display: inline-block;
+    vertical-align: top;
+    width: 49%; }
+
+.user-avatar {
+  position: absolute;
+  top: -25px ;
+  top: -2.5rem ;
+  left: 10px ;
+  left: 1rem ;
+  display: block;
+  width: 80px ;
+  width: 8rem ;
+  height: 80px ;
+  height: 8rem ;
+  overflow: hidden;
+  border-radius: 40px;
+  border: 4px solid #8f043a;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.6); }
+  .user-avatar img {
+    width: 100%;
+    height: auto; }
+  .user-avatar h3 {
+    margin-top: 0; }
+
+.share-bar {
+  text-align: right; }
+  .share-bar li {
+    display: inline-block;
+    vertical-align: top;
+    height: 20px ;
+    height: 2rem ;
+    margin: 0 10px ;
+    margin: 0 1rem ; }
+    .share-bar li a {
+      display: block;
+      height: 20px ;
+      height: 2rem ; }
+
+[data-module="wfm-post-preview"] {
   width: 100%;
   height: 100%;
   display: block; }
