--- a/templates/common/document_head.jade
+++ b/templates/common/document_head.jade
@@ -6,6 +6,6 @@ head(profile="http://gmpg.org/xfn/11")
         title WardrobeFM - Your Style, Your Music
         meta(name="description" content="Wardrobe.FM: Your music, your style")
     link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic|Oswald:400,300')
-    link(rel='stylesheet' href="css/normalize.css")
+    link(rel='stylesheet' href="css/vendor/normalize.css")
     link(rel='stylesheet' href="css/style.css")
     include script_inclusions
