--- a/client/templates/about.jade
+++ b/client/templates/about.jade
@@ -1,6 +1,6 @@
 template(name="about")
   div(class="page about")
-    +nav title='About' black=false
+    +nav(title='About' black=false)
 
     div.content-scrollable
       div(class="bg-image about")
