--- a/client/templates/bookmarks.jade
+++ b/client/templates/bookmarks.jade
@@ -4,13 +4,12 @@ template(name="bookmarks")
 
     div.content-scrollable
       div.list-recipes
-        | #{#each this}
-        +recipeItem recipe=this size='large'
-        | #{else}
-        div.wrapper-message
-          div.title-message No bookmarks yet
-          div.subtitle-message Tap 
-            span.icon-bookmark-hollow
-            | to bookmark your favorite recipes. 
-            a(href="#{pathFor 'home'}") Return home
-        | #{/each}
+        each this
+          +recipeItem(recipe=this size='large')
+        else
+          div.wrapper-message
+            div.title-message No bookmarks yet
+            div.subtitle-message Tap 
+              span.icon-bookmark-hollow
+              | to bookmark your favorite recipes. 
+              a(href="#{pathFor 'home'}") Return home
