--- a/client/templates/not-found.jade
+++ b/client/templates/not-found.jade
@@ -1,13 +1,9 @@
-<template name="notFound">
-  <div class="page not-found">
-    {{> nav title='Not Found'}}
+template(name="notFound")
+  div.page not-found
+    +nav(title='Not Found')
 
-    <div class="content-scrollable">
-      <div class="wrapper-message">
-        <div class="title-message">Yikes! That wasn't found</div>
-        <div class="subtitle-message">The stuff you were looking for wasn't found. <a href="{{pathFor 'home'}}">Return home</a></div>
-      </div>
-
-    </div>
-  </div>
-</template>
+    div.content-scrollable
+      div.wrapper-message
+        div.title-message Yikes! That wasn't found
+        div.subtitle-message The stuff you were looking for wasn't found. 
+          a(href="{{pathFor 'home'}}") Return home
