--- a/client/templates/recipe-item.jade
+++ b/client/templates/recipe-item.jade
@@ -1,15 +1,11 @@
-<template name="recipeItem">
-  <a class="item-recipe {{highlightedClass}}" href="{{path}}">
-    {{#with recipe}}
-      <span class="attribution">
-        <span class="title-recipe">{{title}}</span>
-        <span class="metadata-recipe">
-          <span class="author-recipe">{{source.name}}</span>
-          <span class="bookmarks-recipe"><span class="icon-bookmark"></span> {{bookmarkCount}}</span>
-        </span>
-      </span>
-    {{/with}}
-
-    <img src="{{recipeImage recipe=recipe size=size}}" />
-  </a>
-</template>
+template(name="recipeItem")
+  a(class="item-recipe {{highlightedClass}}" href="{{path}}")
+    with recipe
+      span.attribution
+        span.title-recipe #{title}
+        span.metadata-recipe 
+          span.author-recipe #{source.name}
+          span.bookmarks-recipe 
+            span.icon-bookmark
+            | #{bookmarkCount}
+    img(src="{{recipeImage recipe=recipe size=size}}")
