--- a/client/templates/recipes.jade
+++ b/client/templates/recipes.jade
@@ -1,18 +1,11 @@
-<template name="recipes">
-  <div class="page recipes">
-    {{> nav title='Recipes' black=true}}
+template(name="recipes")
+  div(class="page recipes")
+    +nav(title='Recipes' black=true)
 
-    <div class="content-scrollable">
-      <div class="list-recipes">
-        {{#each this}}
-          {{#if highlighted}}
-            {{> recipeItem recipe=this size='large'}}
-          {{else}}
-            {{> recipeItem recipe=this size='small'}}
-          {{/if}}
-        {{/each}}
-      </div>
-    </div>
-
-  </div>
-</template>
+    div.content-scrollable
+      div.list-recipes
+        each this
+          if highlighted
+            +recipeItem(recipe=this size='large')
+          else
+            +recipeItem(recipe=this size='small')
