[WardrobeFM] JS -> Coffee

--- a/client/templates/home.jade
+++ b/client/templates/home.jade
@@ -24,14 +24,14 @@ template(name="home")
           +activity
         else
           div.wrapper-message
-            div.title-message No one is cooking yet!
-            div.subtitle-message Share that you made a recipe and it will show up here.
+            div.title-message No one is inspired yet!
+            div.subtitle-message Share some inspiration and it will show up here.
       a.btn-primary(href="{{pathFor 'feed'}}") See other posts
 
-      h2.list-title Our Favorite Recipes
-      div.list-subtitle Hand-picked by neighborhood chefs
+      h2.list-title Our Favorite Inspiration
+      div.list-subtitle Hand-picked by WardrobeFM admins
       div.list-recipes
         each featuredRecipes
           +recipeItem(recipe=this size='small')
 
-      a.btn-primary(href="{{pathFor 'recipes'}}") Explore all our recipes
+      a.btn-primary(href="{{pathFor 'recipes'}}") Explore all inspiration
