--- a/client/templates/not-found.jade
+++ b/client/templates/not-found.jade
@@ -1,5 +1,5 @@
 template(name="notFound")
-  div.page not-found
+  div(class="page not-found")
     +nav(title='Not Found')
 
     div.content-scrollable
