--- a/client/templates/bookmarks.jade
+++ b/client/templates/bookmarks.jade
@@ -1,6 +1,6 @@
 template(name="bookmarks")
   div(class="page bookmarks")
-    +nav title='Your Bookmarks' subtext=recipeCount
+    +nav(title='Your Bookmarks' subtext=recipeCount)
 
     div.content-scrollable
       div.list-recipes
