--- a/client/templates/overlay.jade
+++ b/client/templates/overlay.jade
@@ -1,3 +1,3 @@
 template(name="overlay")
   div(id="overlay-hook")
-    +Template.dynamic(template=template data=data)
+    +Template.dynamic template=template data=data
