[Meteor] Making ch-ch-changes

--- a/client/stylesheets/util/variables.import.less
+++ b/client/stylesheets/util/variables.import.less
@@ -1,5 +1,5 @@
 // Core
-@color-primary: #d83e14; // blood orange
+@color-primary: red;
 @color-secondary: @color-well; //
 @color-tertiary: @color-medium-well; //
 @color-complementary: #000; //
