--- a/client/templates/app-body.html
+++ b/client/templates/app-body.html
@@ -1,19 +1,19 @@
 <template name="appBody">
   <div class="wrapper-welcome">
-    <div class="title-welcome">Local Market</div>
-    <div class="description-welcome">Local Market was made by <a href="http://percolatestudio.com" target="_blank" class="js-open">Percolate Studio</a> as an example of a cross platform mobile app built in <a href="https://www.meteor.com" target="_blank" class="js-open">Meteor</a>. The entire app is less than 1,000 lines of JavaScript. View the source on <a href="https://github.com/meteor/meteor/tree/devel/examples/localmarket" target="_blank" class="js-open">GitHub</a>.
+    <div class="title-welcome">WardrobeFM</div>
+    <div class="description-welcome">WardrobeFM was made by <a href="http://seanloyless.info" target="_blank" class="js-open">Sean Loyless</a> as an example of a cross platform mobile app built in <a href="https://www.meteor.com" target="_blank" class="js-open">Meteor</a>. The entire app is less than 1,000 lines of JavaScript. View the source on <a href="https://github.com/sloyless/WardrobeFM" target="_blank" class="js-open">GitHub</a>.
     </div>
     
     <div class="description-welcome">
-    The app is designed to run on a physical device, where it uses the hardware's native camera and GPS support.
+      The app is designed to run on a physical device, where it uses the hardware's native camera and GPS support.
     </div>
 
     <div class="description-welcome">
-    You can also run it in a simulator, or in a desktop browser as a convenience (what you're looking at right now).
+      You can also run it in a simulator, or in a desktop browser as a convenience (what you're looking at right now).
     </div>
 
     <div class="description-welcome">
-    This app includes a simple administrative backend that you can use to set welcome text on the app's home screen. Visit <a href="{{pathFor 'admin'}}">/admin</a> to log into the backend. The first authenticated user is allowed access.
+      This app includes a simple administrative backend that you can use to set welcome text on the app's home screen. Visit <a href="{{pathFor 'admin'}}">/admin</a> to log into the backend. The first authenticated user is allowed access.
     </div>
   </div>
 
