--- a/client/templates/home.import.less
+++ b/client/templates/home.import.less
@@ -61,8 +61,12 @@
 
   .callout-news {
     .font-s2;
-    padding: .75rem 1.25rem 1rem;
+    padding: .5rem 1.25rem .5rem;
     text-align: center;
+    position: absolute;
+    top: 47px;
+    background: rgba(255, 255, 255, 0.97);
+    width: 100%;
 
     .title-callout {
       .title-caps;
