[Meteor] Converted all LESS to Sass, fixed font-face mixin and loading problem. FINALLY ready for real development!

--- a/client/stylesheets/globals/_icon.sass
+++ b/client/stylesheets/globals/_icon.sass
@@ -1,4 +1,4 @@
-+font-face("market", font-files("icon/market.woff?-3varwy", "icon/market.eot?-3varwy", "icon/market.ttf?-3varwy"), "icon/market.eot")
++font-face("market", (url('icon/market.woff?-3varwy') format('woff'), url('icon/market.eot?-3varwy') format('embedded-opentype'), url('icon/market.ttf?-3varwy') format('truetype')), false)
 
 [class^="icon-"], [class*=" icon-"] 
 	font-family: "market"
