--- a/client/stylesheets/util/_fontface.sass
+++ b/client/stylesheets/util/_fontface.sass
@@ -1,9 +1,9 @@
-+font-face("lorabold", font-files("/font/lora-bold-subset.woff", "/font/lora-bold-subset.eot", "/font/lora-bold-subset.ttf"), "/font/lora-bold-subset.eot");
++font-face("lorabold", (url('font/lora-bold-subset.woff') format('woff'), url('font/lora-bold-subset.eot') format('embedded-opentype'), url('font/lora-bold-subset.ttf') format('truetype')), false)
 
-+font-face("lato", font-files("/font/lato-regular-webfont.woff", "/font/lato-regular-webfont.eot", "/font/lato-regular-webfont.ttf"), "/font/lato-regular-webfont.eot", 400);
++font-face("lato", (url('font/lato-regular-webfont.woff') format('woff'), url('font/lato-regular-webfont.eot') format('embedded-opentype'), url('font/lato-regular-webfont.ttf') format('truetype')), false, 400)
 
-+font-face("lato", font-files("/font/lato-regular-webfont.woff", "/font/lato-regular-webfont.eot", "/font/lato-regular-webfont.ttf"), "/font/lato-regular-webfont.eot", 700);
++font-face("lato", (url('font/lato-bold-webfont.woff') format('woff'), url('font/lato-bold-webfont.eot') format('embedded-opentype'), url('font/lato-bold-webfont.ttf') format('truetype')), false, 700)
 
-+font-face("lato", font-files("/font/lato-regular-webfont.woff", "/font/lato-regular-webfont.eot", "/font/lato-regular-webfont.ttf"), "/font/lato-regular-webfont.eot", 400, italic);
++font-face("lato", (url('font/lato-italic-webfont.woff') format('woff'), url('font/lato-italic-webfont.eot') format('embedded-opentype'), url('font/lato-italic-webfont.ttf') format('truetype')), false, 400, italic)
 
-+font-face("lato", font-files("/font/lato-regular-webfont.woff", "/font/lato-regular-webfont.eot", "/font/lato-regular-webfont.ttf"), "/font/lato-regular-webfont.eot", 900);
++font-face("lato", (url('font/lato-black-webfont.woff') format('woff'), url('font/lato-black-webfont.eot') format('embedded-opentype'), url('font/lato-black-webfont.ttf') format('truetype')), false, 900)
