[Dev] Updated Twitter API Key

--- a/client/templates/admin.jade
+++ b/client/templates/admin.jade
@@ -8,7 +8,7 @@ template(name="admin")
         h1.title-admin Admin
         form
           label Edit the front page news:
-          textarea(name="text" rows="5" placeholder="Show the latest Local Market news on the the frontpage...") #{latestNews.text}
+          textarea(name="text" rows="5" placeholder="Show the latest Wardrobe.FM news on the the frontpage...") #{latestNews.text}
           button.btn-primary(type="submit") Save
       else
         h1.title-admin Forbidden
