[Dev] Overwhelmed. I need to sit down and figure out where I want to start with this.

--- a/client/templates/app-body.html
+++ b/client/templates/app-body.html
@@ -1,7 +1,7 @@
 <template name="appBody">
   <div class="wrapper-welcome">
     <div class="title-welcome">WardrobeFM</div>
-    <div class="description-welcome">WardrobeFM was made by <a href="http://seanloyless.info" target="_blank" class="js-open">Sean Loyless</a> as an example of a cross platform mobile app built in <a href="https://www.meteor.com" target="_blank" class="js-open">Meteor</a>. The entire app is less than 1,000 lines of JavaScript. View the source on <a href="https://github.com/sloyless/WardrobeFM" target="_blank" class="js-open">GitHub</a>.
+    <div class="description-welcome">WardrobeFM was made by <a href="http://seanloyless.info" target="_blank" class="js-open">Sean Loyless</a> as an example of a cross platform mobile app built in <a href="https://www.meteor.com" target="_blank" class="js-open">Meteor</a>. View the source on <a href="https://github.com/sloyless/WardrobeFM" target="_blank" class="js-open">GitHub</a>.
     </div>
     
     <div class="description-welcome">
