--- a/client/templates/_share-overlay.sass
+++ b/client/templates/_share-overlay.sass
@@ -1,4 +1,5 @@
-.overlay.share 
+.overlay.share
+  background: rgba(255,255,255,.9)
   .wrapper-camera 
     +position(absolute, auto, 0, 0, 0, 100%)
     text-align: center
