[Dev] Started customizing the share/post box

--- a/client/templates/_share-overlay.sass
+++ b/client/templates/_share-overlay.sass
@@ -1,5 +1,5 @@
 .overlay.share
-  background: rgba(255,255,255,.9)
+  background: rgba(255,255,255,.95)
   .wrapper-camera 
     +position(absolute, auto, 0, 0, 0, 100%)
     text-align: center
@@ -37,6 +37,10 @@
       
       .message-share 
         width: 100%
+      
+      .artist-search
+        border-top: 1px dashed $color-primary
+        width: 100%
 
       .avatar 
         height: 2.5rem
@@ -47,7 +51,7 @@
         margin-top: 1rem
 
       .message-share 
-        height: 12em
+        height: 8em
         resize: none
 
     .wrapper-checkbox 
