--- a/client/templates/share-overlay.jade
+++ b/client/templates/share-overlay.jade
@@ -4,26 +4,26 @@ template(name="shareOverlay")
       unless attachedImage
         a(href="#" class="js-close-overlay overlay-dismiss")
           span.icon-cross
-        div.wrapper-heading
-          div.title-overlay Share
-          div.subtitle-overlay Share this post with the WardrobeFM community.
+        .wrapper-heading
+          .title-overlay Post
+          .subtitle-overlay Share your inspiration with the WardrobeFM Community.
 
-        div.wrapper-camera
+        .wrapper-camera
           a(class="js-attach-image btn-camera")
             span.icon-camera
-          div.subtext-camera Add your photo
+          .subtext-camera Add your photo
       else
         a(href="#" class="js-unattach-image overlay-back")
           span.icon-arrow-left-alt
-        div.title-page Share
+        .title-page Post
         a(href="#" class="js-close-overlay overlay-dismiss")
           span.icon-cross
 
-        div.bg-image(style="background-image: url('{{attachedImage}}')")
+        .bg-image(style="background-image: url('{{attachedImage}}')")
 
         form.form-share
-          div.form-group
-            div.avatar
+          .form-group
+            .avatar
               img.image-avatar(src="{{avatar}}")
 
             textarea.message-share(
@@ -35,8 +35,12 @@ template(name="shareOverlay")
               maxlength="140" 
               placeholder="Add advice, suggestions, or thoughts to share with the community..."
             )
+            
+            .artist-box
+              label.visuallyhidden(for="artist") Enter a musician or band name
+              //input.artist-search(type="text" name="artist" placeholder="Who is inspiring you today?")
 
-          div.wrapper-checkbox
+          .wrapper-checkbox
             label.checkbox(for="tweeting")
               input(type="checkbox" name="tweeting" id="tweeting" checked)
               span Post to Twitter
