[Dev] Some cosmetic changes: - Moved news block above header image - Added Moment package to show relative dates for posts - Fixed some backgrounds improperly formatted due to Less->Sass switch (Compass)

--- a/client/stylesheets/globals/_background.sass
+++ b/client/stylesheets/globals/_background.sass
@@ -5,4 +5,4 @@
   background-size: cover
   overflow: hidden
   position: relative
-  +background-image(image-url('img/app/bg-home-640x655.jpg'))
+  background-image: url('img/app/bg-home-640x655.jpg')
