--- a/client/templates/activity.jade
+++ b/client/templates/activity.jade
@@ -5,7 +5,7 @@ template(name="activity")
         img.image-avatar(src="{{userAvatar}}")
       span.meta
         span.author #{userName}
-        span.date #{postDate} 
+        .date #{postDate} 
 
     .bg-image(style="background-image: url('{{image}}');")
     span.attribution
