--- a/client/stylesheets/globals/_layout.sass
+++ b/client/stylesheets/globals/_layout.sass
@@ -67,6 +67,6 @@ body
     z-index: 1
 
 .overlay 
-  +background-image(linear-gradient(top, rgba(232, 234, 241,.97), rgba(243,243,244, .97) 100%))
+  +background-image(linear-gradient(rgba(232, 234, 241,.97), rgba(243,243,244, .97) 100%))
   +position(absolute, 0, 0, 0, 0)
   z-index: 1
