--- a/client/templates/_home.sass
+++ b/client/templates/_home.sass
@@ -59,10 +59,9 @@
     +font-s2
     padding: .5rem 1.25rem .5rem
     text-align: center
-    position: absolute
-    top: 47px
     background: rgba(255, 255, 255, 0.97)
     width: 100%
+    margin-top: 46px
 
     .title-callout 
       +title-caps
