[Dev] Removing recipe files. Changing out default post details.

--- a/client/stylesheets/globals/_list-activities.sass
+++ b/client/stylesheets/globals/_list-activities.sass
@@ -38,7 +38,8 @@
       display: block
 
     .author  
-      +type-black 
+      +type-black
+      display: inline
 
     .recipe 
       +type-bold
@@ -49,5 +50,5 @@
 
   .bg-image 
     display: block
-    height: 16em
+    height: 25em
     width: 100%
